[package]
name = "rusty_sims"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15"
ulid = "1.1.2"
comfy-table = "7.1.0"
rusqlite = "0.31.0"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
crossterm = "0.27.0"

